[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/circle_grad.png" type="Texture" id=1]
[ext_resource path="res://prefab_scenes/ForcefieldPanel/ForcefieldPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/images/white.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 0.5 )

[node name="ForcefieldPanel" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
forcefield_name = "violet"

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 1 )

[node name="AreaSprite" type="Sprite" parent="."]
modulate = Color( 0.498039, 0, 1, 0.784314 )
scale = Vector2( 0.6, 0.15 )
texture = ExtResource( 1 )

[node name="ButtonSprite" type="Sprite" parent="."]
modulate = Color( 0.498039, 0, 1, 1 )
scale = Vector2( 1, 0.05 )
texture = ExtResource( 3 )
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
